<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".ui.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile"
                    android:contentDescription="@string/profile_image"
                    android:scaleType="centerCrop"
                    />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_location"
                android:fontFamily="@font/nunito_sans_regular"
                android:layout_marginStart="15dp"
                app:drawableStartCompat="@drawable/ic_location"
                android:drawablePadding="10dp"
                app:layout_constraintStart_toEndOf="@id/cv_profile"
                app:layout_constraintTop_toTopOf="@id/cv_profile"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wertheimer, illinois"
                android:textColor="@color/white"
                android:fontFamily="@font/nunito_sans_medium"
                app:drawableEndCompat="@drawable/ic_caret_down"
                android:drawablePadding="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_location"
                app:layout_constraintStart_toEndOf="@id/cv_profile"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_search"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/enter_the_receipt_number"
                android:textColorHint="@color/background_color"
                android:fontFamily="@font/nunito_sans_regular"
                android:background="@drawable/bg_rounded_white"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_search"
                android:paddingHorizontal="10dp"
                android:focusable="false"
                android:drawableEnd="@drawable/ic_scan"
                app:layout_constraintTop_toBottomOf="@id/tv_location_name"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_tracking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracking"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_shipment_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/tv_tracking">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_shipment_no_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shipment_number"
                        android:textColor="@color/text_color_gray"
                        android:fontFamily="@font/nunito_sans_regular"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_shipment_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="NEJ2005631233332"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_shipment_no_label"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_forklift"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/forklift"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <View
                        android:id="@+id/divider_1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/background_color"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/tv_shipment_no"
                        />

                    <!--SENDER-->

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_sender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_package"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/divider_1"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_sender_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:text="@string/sender"
                        android:textColor="@color/text_color_gray"
                        app:layout_constraintEnd_toStartOf="@+id/tv_time_label"
                        app:layout_constraintStart_toEndOf="@id/iv_sender"
                        app:layout_constraintTop_toTopOf="@id/iv_sender" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_sender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Atlanta, 5243"
                        android:textColor="@color/black"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:layout_marginStart="10dp"
                        app:layout_constraintEnd_toStartOf="@id/tv_time"
                        app:layout_constraintTop_toBottomOf="@id/tv_sender_label"
                        app:layout_constraintStart_toEndOf="@id/iv_sender"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_time_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textColor="@color/text_color_gray"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/tv_sender_label"
                        app:layout_constraintTop_toTopOf="@id/iv_sender"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:text="2days - 3days"
                        android:textColor="@color/black"
                        android:drawableStart="@drawable/green_indicator"
                        android:drawablePadding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_sender"
                        app:layout_constraintTop_toBottomOf="@id/tv_time_label" />

                    <!--RECEIVER-->
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_receiver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_receiver_package"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/iv_sender"
                        app:layout_constraintStart_toStartOf="parent"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_receiver_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:text="@string/receiver"
                        android:textColor="@color/text_color_gray"
                        app:layout_constraintEnd_toStartOf="@+id/tv_status_label"
                        app:layout_constraintStart_toEndOf="@id/iv_receiver"
                        app:layout_constraintTop_toTopOf="@id/iv_receiver" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_receiver"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Chicago, 6342"
                        android:textColor="@color/black"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:layout_marginStart="10dp"
                        app:layout_constraintEnd_toStartOf="@id/tv_status"
                        app:layout_constraintTop_toBottomOf="@id/tv_receiver_label"
                        app:layout_constraintStart_toEndOf="@id/iv_receiver"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_status_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@color/text_color_gray"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:layout_marginStart="10dp"
                        app:layout_constraintStart_toEndOf="@id/tv_receiver_label"
                        app:layout_constraintTop_toTopOf="@id/iv_receiver"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:text="Waiting to collect"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tv_receiver"
                        app:layout_constraintTop_toBottomOf="@id/tv_status_label" />

                    <View
                        android:id="@+id/divider_2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/background_color"
                        android:layout_marginTop="15dp"
                        app:layout_constraintTop_toBottomOf="@id/iv_receiver"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_add_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/nunito_sans_semibold"
                        android:text="@string/add_shop"
                        android:textColor="@color/accent_color"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/ic_add"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider_2"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_available_vehicles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_vehicles"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/cv_shipment_info"
                app:layout_constraintStart_toStartOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_vehicle"
                app:layout_constraintTop_toBottomOf="@id/tv_available_vehicles"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>